apps/web/traefik/middleware-authentik-forwardauth-media.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: authentik-forwardauth-media
    namespace: media
spec:
    forwardAuth:
        address: overwritten-by-secret
        trustForwardHeader: true
        authResponseHeaders:
            - X-authentik-username
            - X-authentik-groups
            - X-authentik-email
            - X-authentik-name
            - X-authentik-uid
            - X-authentik-jwt
            - X-authentik-meta-jwks
            - X-authentik-meta-outpost
            - X-authentik-meta-provider
            - X-authentik-meta-app
            - X-authentik-meta-version
