apps/web/traefik/middleware-https-only.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-only
spec:
  redirectScheme:
    permanent: true
    scheme: https
