apps/web/traefik/external-endpoint-pterodactyl-node.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: pterodactyl-node
subsets:
  - addresses:
    - ip: 10.0.50.2
    ports:
    - protocol: TCP
      port: 7329
