apps/web/traefik/external-service-nextcloud.yaml
kind: Service
apiVersion: v1
metadata:
  name: nextcloud
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  clusterIP: None
