apps/web/traefik/external-service-pterodactyl-node.yaml
kind: Service
apiVersion: v1
metadata:
  name: pterodactyl-node
spec:
  # type: ExternalName
  # externalName: 10.0.50.2
  ports:
  - protocol: TCP
    port: 7329
    targetPort: 7329
  clusterIP: None
