apps/web/traefik/external-ingress-route-pterodactyl-node.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: &appname pterodactyl-node
spec:
  entryPoints:
    - websecure
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: *appname
          port: 7329
      middlewares:
        - name: https-only
  tls:
    secretName: pterodactyl-node-cert
